--- a/index.html
+++ b/index.html
@@ -12,19 +12,6 @@
         .form-container {
             margin-bottom: 20px;
         }
-        #ordersContainer {
-            margin-top: 20px;
-        }
-        .order-item {
-            border: 1px solid #ddd;
-            padding: 10px;
-            margin-bottom: 10px;
-            position: relative;
-        }
-        .order-title {
-            font-weight: bold;
-            margin-bottom: 5px;
-        }
         button {
             padding: 10px 20px;
             background-color: #4CAF50;
@@ -33,96 +20,49 @@
             cursor: pointer;
             margin-right: 10px;
         }
-        .delete-button {
-            background-color: #f44336;
-        }
     </style>
 </head>
 <body>
     <h1>إضافة طلب</h1>
-
-    <!-- نموذج لإضافة طلب -->
     <div class="form-container">
-        <label for="orderName">اسم الطلب:</label>
-        <input type="text" id="orderName" placeholder="أدخل اسم الطلب">
-
+        <label for="customerName">اسم العميل:</label>
+        <input type="text" id="customerName" placeholder="أدخل اسم العميل">
+        <label for="customerId">رقم العميل:</label>
+        <input type="text" id="customerId" placeholder="أدخل رقم العميل">
         <label for="orderId">رقم الطلب:</label>
         <input type="text" id="orderId" placeholder="أدخل رقم الطلب">
-
-        <label for="customerNumber">رقم العميل:</label>
-        <input type="text" id="customerNumber" placeholder="أدخل رقم العميل">
-
         <button onclick="addOrder()">أضف طلب</button>
+        <button onclick="window.location.href='show-orders.html'">عرض الطلبات</button>
+        <button onclick="window.location.href='show-dell-orders.html'">عرض الطلبات المحذوفة</button>
     </div>
 
-    <h2>جميع الطلبات</h2>
-    <div id="ordersContainer">
-        <!-- الطلبات ستظهر هنا -->
-    </div>
-    <div class="dellOrders" id="dellOrders">
-        <a href="login.html" target="_blank">الطلبات المحذوفه</a>
-    </div>
     <script>
         function addOrder() {
-            const name = document.getElementById('orderName').value;
-            const id = document.getElementById('orderId').value;
-            const customerNumber = document.getElementById('customerNumber').value;
+            const customerName = document.getElementById('customerName').value;
+            const customerId = document.getElementById('customerId').value;
+            const orderId = document.getElementById('orderId').value;
 
-            if (name && id && customerNumber) {
+            if (customerName && customerId && orderId) {
                 const newOrder = {
-                    name: name,
-                    id: id,
-                    customerNumber: customerNumber,
+                    name: customerName,
+                    id: customerId,
+                    orderId: orderId,
                     timestamp: new Date().toLocaleString()
                 };
 
+                // Retrieve existing orders from localStorage
                 let orders = JSON.parse(localStorage.getItem('orders')) || [];
                 orders.push(newOrder);
                 localStorage.setItem('orders', JSON.stringify(orders));
 
-                document.getElementById('orderName').value = '';
+                // Clear fields after adding
+                document.getElementById('customerName').value = '';
+                document.getElementById('customerId').value = '';
                 document.getElementById('orderId').value = '';
-                document.getElementById('customerNumber').value = '';
-
-                displayOrders();
             } else {
                 alert('يرجى ملء جميع الحقول.');
             }
         }
-
-        function displayOrders() {
-            const orders = JSON.parse(localStorage.getItem('orders')) || [];
-            const ordersContainer = document.getElementById('ordersContainer');
-            ordersContainer.innerHTML = '';
-
-            orders.forEach((order, index) => {
-                const orderDiv = document.createElement('div');
-                orderDiv.className = 'order-item';
-                orderDiv.innerHTML = `
-                    <div class="order-title">طلب رقم ${order.id}</div>
-                    <div><strong>اسم الطلب:</strong> ${order.name}</div>
-                    <div><strong>رقم العميل:</strong> ${order.customerNumber}</div>
-                    <div><strong>تاريخ ووقت الإرسال:</strong> ${order.timestamp}</div>
-                    <button class="delete-button" onclick="deleteOrder(${index})">حذف</button>
-                `;
-                ordersContainer.appendChild(orderDiv);
-            });
-        }
-
-        function deleteOrder(index) {
-            let orders = JSON.parse(localStorage.getItem('orders')) || [];
-            const deletedOrder = orders.splice(index, 1)[0];
-            localStorage.setItem('orders', JSON.stringify(orders));
-
-            // نقل البيانات المحذوفة إلى صفحة "صفحة تسجيل الدخول"
-            let deletedOrders = JSON.parse(localStorage.getItem('deletedOrders')) || [];
-            deletedOrders.push(deletedOrder);
-            localStorage.setItem('deletedOrders', JSON.stringify(deletedOrders));
-
-            displayOrders(); // إعادة عرض الطلبات بعد الحذف
-        }
-
-        window.onload = displayOrders;
     </script>
 </body>
 </html>
